Add word count validator

--- a/lib/validaty/locales/en.yml
+++ b/lib/validaty/locales/en.yml
@@ -11,3 +11,5 @@ en:
       boolean: "must be true or false"
       domain: "must be from the %{domain} domain"
       starts_with: "must start with %{starts_with}"
+      too_few_words: "must have at least %{count} words"
+      too_many_words: "must have at most %{count} words"
