--- a/lib/validaty/locales/pt-BR.yml
+++ b/lib/validaty/locales/pt-BR.yml
@@ -11,3 +11,5 @@ pt-BR:
       boolean: "deve ser verdadeiro ou falso"
       domain: "precisa ser do domínio %{domain}"
       starts_with: "precisa começar com %{starts_with}"
+      too_few_words: "deve ter no mínimo %{count} palavras"
+      too_many_words: "deve ter no máximo %{count} palavras"
